[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.132"
num_enum = "0.5.7"
replace_with = "0.1.7"
rustc-hash = "1.1.0"

[profile.release]
debug = 1
