[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynasmrt = "1.2.3"
lazy_static = "1.4.0"
libc = "0.2.132"
nix = "0.25.0"
num_enum = "0.5.7"
once_cell = "1.16.0"
replace_with = "0.1.7"
rustc-hash = "1.1.0"

[profile.release]
debug = 1
